getScreenCTM on <use> should not include the additional translation

This is a partial revert of https://codereview.chromium.org/2711503002,
preserving the fix from that bug (crbug.com/678167) while restoring the
LocalCoordinateSpaceTransform() infrastructure to compute the correct
CTM for <use> elements.

BUG=716711

Review-Url: https://codereview.chromium.org/2853223002
Cr-Commit-Position: refs/heads/master@{#468657}

Former-commit-id: 9acc325d119247a27d0a007d56fc6cc2fa23edc7