third_party/WebKit/Source/core/svg/SVGElement.cpp
@@ -288,7 +288,7 @@ void SVGElement::ClearAnimatedAttribute(const QualifiedName& attribute) {
   });
 }
 
-AffineTransform SVGElement::LocalCoordinateSpaceTransform() const {
+AffineTransform SVGElement::LocalCoordinateSpaceTransform(CTMScope) const {
   // To be overriden by SVGGraphicsElement (or as special case SVGTextElement
   // and SVGPatternElement)
   return AffineTransform();
