third_party/WebKit/Source/core/svg/SVGPatternElement.cpp
@@ -216,7 +216,8 @@ void SVGPatternElement::CollectPatternAttributes(
   }
 }
 
-AffineTransform SVGPatternElement::LocalCoordinateSpaceTransform() const {
+AffineTransform SVGPatternElement::LocalCoordinateSpaceTransform(
+    CTMScope) const {
   return CalculateTransform(SVGElement::kExcludeMotionTransform);
 }
 
